<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ListadeReceitas"
    android:orientation="vertical"
    android:paddingHorizontal="0dp"
    android:paddingTop="0dp"
    android:background="@color/amarelopastel">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/roxopastel"
            android:id="@+id/lista_receita_toolbar">

                <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/culinary_toolbar_logo"
                    app:tint="@color/white"
                    android:layout_marginBottom="15dp">

                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/title_receitinhas_do_odio"
                    style="@style/titleFontStyle"
                    android:textColor="@color/white"
                    android:layout_marginBottom="5dp"

                    />

                <ImageButton
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:src="@drawable/ic_more_options"
                    android:layout_gravity="end"
                    android:backgroundTint="@color/roxopastel"
                    app:tint="@color/white"
                    app:menu="@menu/menu_lista_receita"
                    android:contentDescription="@string/mais_opcoes"
                    android:id="@+id/btn_menu_lista_receita" />

        </Toolbar>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            app:startIconDrawable="@drawable/ic_search"
            app:startIconTint="@color/lilas_palette"
            android:hint="@string/busque_sua_receita"
            app:boxBackgroundColor="@color/white"
            android:layout_marginTop="15dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxStrokeColor="@color/outline_color"
            app:hintTextColor="@color/hint_color"
            android:textColorHint="@color/hint_color"
            android:id="@+id/text_input_layout"
            android:layout_marginBottom="5dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/lightblack_palette"
                android:textSize="18sp"
                android:id="@+id/search_recipe"
                android:fontFamily="@font/kgprimarypenmanship"
                android:textStyle="bold"
                android:paddingStart="40dp"
                android:inputType="text"
                app:tint="@color/white">


            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/lista"
            tools:listitem="@layout/cardview_lista_receita"
            android:paddingHorizontal="40dp"
        />
    </LinearLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@android:drawable/ic_input_add"
        android:layout_gravity="end|bottom"
        app:backgroundTint="@color/roxopastel"
        app:tint="@color/white"
        app:fabCustomSize="60dp"
        android:id="@+id/btnshow"
        app:shapeAppearanceOverlay="@style/Widget.Design.FloatingActionButton"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="40dp"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>